--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<body>
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Home</title>
+  </head>
+  <body>
+    <nav>
+    <a href="/">Home</a>
+    <a href="/about.html">About</a>
+</nav>
+    <h1>hello world!</h1>
+  </body>
 </html>
