--- a/index.html
+++ b/index.html
@@ -1,14 +1,5 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Home</title>
-  </head>
-  <body>
-    <nav>
-    <a href="/">Home</a>
-    <a href="/about.html">About</a>
-</nav>
-    <h1>hello world!</h1>
-  </body>
-</html>
+---
+layout: default
+---
+
+# hello world
