--- a/demo.html
+++ b/demo.html
@@ -2,4 +2,6 @@
 layout: default
 ---
 
-[Link to another page](./another-page.html).
+<a href="/chapter.html">
+    <img src="/assets/img/p01.jpeg" alt="manga" style="width:191px;height:300px;">
+</a>
