--- a/demo.html
+++ b/demo.html
@@ -2,6 +2,17 @@
 layout: default
 ---
 
-<a href="/chapter.html">
-    <img src="/assets/img/p01.jpeg" alt="manga" style="width:191px;height:300px;">
-</a>
+<div style="display: flex;">
+    <div>
+        <a href="/pages.html">
+            <img src="/assets/img/p01.jpeg" alt="manga" style="width:191px;height:300px;">
+        </a>
+    </div>
+
+    <div>
+        <span>ドラえもん</span>
+        <span>藤子・F・不二雄</span>
+    </div>
+</div>
+
+
