--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div style="display: flex;">
+<div style="display: flex; align-items: center;">
     <div>
         <a href="/pages.html">
             <img src="/assets/img/p01.jpeg" alt="manga" style="width:191px;height:300px;">
@@ -10,8 +10,9 @@ layout: default
     </div>
 
     <div>
-        <span>ドラえもん</span>
-        <span>藤子・F・不二雄</span>
+        <span style="font-size: 20px;font-weight: bold;">ドラえもん</span>
+        <br>
+        <span style="font-size: 16px;">藤子・F・不二雄</span>
     </div>
 </div>
 
