--- a/demo.html
+++ b/demo.html
@@ -2,18 +2,19 @@
 layout: default
 ---
 
-<div style="display: flex; align-items: center;">
+<div style="display: flex;">
     <div>
         <a href="/pages.html">
             <img src="/assets/img/p01.jpeg" alt="manga" style="width:191px;height:300px;">
         </a>
     </div>
 
-    <div>
+    <div style="margin-left: 10px;">
         <span style="font-size: 20px;font-weight: bold;">ドラえもん</span>
         <br>
         <span style="font-size: 16px;">藤子・F・不二雄</span>
     </div>
 </div>
+<span>The page is for demostration only. We do not own the contents.</span>
 
 
