--- a/demo.html
+++ b/demo.html
@@ -15,6 +15,6 @@ layout: default
         <span style="font-size: 16px;">藤子・F・不二雄</span>
     </div>
 </div>
-<span>The page is for demostration only. We do not own the contents.</span>
+<span>This page is for demostration only. We do not own the contents.</span>
 
 
