--- a/pages.html
+++ b/pages.html
@@ -11,4 +11,4 @@ layout: default
         </a>
     </li>
 </ul>
-<span>The page is for demostration only. We do not own the contents.</span>
+<span>This page is for demostration only. We do not own the contents.</span>
