added manga page

--- a/manga.html
+++ b/manga.html
@@ -4,7 +4,7 @@ layout: default
 
 <div style="display: flex;">
     <div>
-        <a href="/manga.html">
+        <a href="/pages.html">
             <img src="/assets/img/p01.jpeg" alt="manga" style="width:191px;height:300px;">
         </a>
     </div>
@@ -16,6 +16,6 @@ layout: default
     </div>
 </div>
 <br>
+<a class="nav-item" href="/pages.html">Volume 1</a>
+<br>
 <span>This page is for demostration only. We do not own the contents.</span>
-
-
