added manga page

--- a/manga.html
+++ b/manga.html
@@ -2,20 +2,19 @@
 layout: default
 ---
 
-<div style="display: flex;">
+<div class="manga" id="manga001" style="display: flex;">
     <div>
-        <a href="/pages.html">
-            <img src="/assets/img/p01.jpeg" alt="manga" style="width:191px;height:300px;">
-        </a>
+        <img class="cover" src="/assets/img/p01.jpeg" alt="manga" style="width:191px;height:300px;">
     </div>
 
     <div style="margin-left: 10px;">
-        <span style="font-size: 20px;font-weight: bold;">ドラえもん</span>
+        <span class="title" style="font-size: 20px;font-weight: bold;">ドラえもん</span>
         <br>
-        <span style="font-size: 16px;">藤子・F・不二雄</span>
+        <span class="artists" style="font-size: 16px;">藤子・F・不二雄</span>
     </div>
 </div>
 <br>
-<a class="nav-item" href="/pages.html">Volume 1</a>
+<a class="nav-item" id="chapter001" href="/pages.html">Volume 1</a>
+<br>
 <br>
 <span>This page is for demostration only. We do not own the contents.</span>
