--- a/pages.html
+++ b/pages.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<ul class="pages">
+<ul class="pages" id="chapter001" mangaId="manga001">
     <li>
         <img src="/assets/img/p02.jpeg">
         <img src="/assets/img/p03.jpeg">
