--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div style="display: flex;">
+<!-- <div style="display: flex;">
     <div>
         <a href="/manga.html">
             <img src="/assets/img/p01.jpeg" alt="manga" style="width:191px;height:300px;">
@@ -11,11 +11,13 @@ layout: default
 
     <div style="margin-left: 10px;">
         <span style="font-size: 20px;font-weight: bold;">ドラえもん</span>
-        <br>
-        <span style="font-size: 16px;">藤子・F・不二雄</span>
     </div>
-</div>
-<br>
+</div> -->
+<a href="/manga.html">
+    <img src="/assets/img/p01.jpeg" alt="manga" style="width:191px;height:300px;margin-top: 5;">
+</a>
+<span style="font-size: 20px;font-weight: bold;">ドラえもん</span>
+<br />
 <span>This page is for demostration only. We do not own the contents.</span>
 
 
