--- a/manga.html
+++ b/manga.html
@@ -2,19 +2,18 @@
 layout: default
 ---
 
-<div class="manga" id="manga001" style="display: flex;">
+<div class="manga" mid="manga001" style="display: flex;">
     <div>
         <img class="cover" src="/assets/img/p01.jpeg" alt="manga" style="width:191px;height:300px;">
     </div>
 
     <div style="margin-left: 10px;">
         <span class="title" style="font-size: 20px;font-weight: bold;">ドラえもん</span>
-        <br>
+        <br />
         <span class="artists" style="font-size: 16px;">藤子・F・不二雄</span>
     </div>
 </div>
-<br>
-<a class="nav-item" id="chapter001" href="/pages.html">Volume 1</a>
-<br>
-<br>
+<br />
+<a class="chapter" cid="chapter001" href="/pages.html">Volume 1</a>
+<br />
 <span>This page is for demostration only. We do not own the contents.</span>
