--- a/pages.html
+++ b/pages.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<ul class="pages" id="chapter001" mangaId="manga001">
+<ul class="pages" cid="chapter001" mid="manga001">
     <li>
         <img src="/assets/img/p02.jpeg">
         <img src="/assets/img/p03.jpeg">
@@ -11,5 +11,5 @@ layout: default
         </a>
     </li>
 </ul>
-<br>
+<br />
 <span>This page is for demostration only. We do not own the contents.</span>
