--- a/demo.html
+++ b/demo.html
@@ -14,10 +14,8 @@ layout: default
     </div>
 </div> -->
 <a href="/manga.html">
-    <img src="/assets/img/p01.jpeg" alt="manga" style="width:191px;height:300px;margin-top: 5;">
+    <img class="cover" src="/assets/img/p01.jpeg" alt="manga">
 </a>
-<span style="font-size: 20px;font-weight: bold;">ドラえもん</span>
+<span class="artists">ドラえもん</span>
 <br />
 <span>This page is for demostration only. We do not own the contents.</span>
-
-
