--- a/manga.html
+++ b/manga.html
@@ -2,15 +2,15 @@
 layout: default
 ---
 
-<div class="manga" mid="manga001" style="display: flex;">
+<div class="manga" mid="manga001">
     <div>
-        <img class="cover" src="/assets/img/p01.jpeg" alt="manga" style="width:191px;height:300px;">
+        <img class="cover" src="/assets/img/p01.jpeg" alt="manga">
     </div>
 
-    <div style="margin-left: 10px;">
-        <span class="title" style="font-size: 20px;font-weight: bold;">ドラえもん</span>
+    <div class="info">
+        <span class="title">ドラえもん</span>
         <br />
-        <span class="artists" style="font-size: 16px;">藤子・F・不二雄</span>
+        <span class="artists">藤子・F・不二雄</span>
     </div>
 </div>
 <br />
