--- a/demo.html
+++ b/demo.html
@@ -2,20 +2,11 @@
 layout: default
 ---
 
-<!-- <div style="display: flex;">
-    <div>
-        <a href="/manga.html">
-            <img src="/assets/img/p01.jpeg" alt="manga" style="width:191px;height:300px;">
-        </a>
-    </div>
-
-    <div style="margin-left: 10px;">
-        <span style="font-size: 20px;font-weight: bold;">ドラえもん</span>
-    </div>
-</div> -->
 <a href="/manga.html">
     <img class="cover" src="/assets/img/p01.jpeg" alt="manga">
 </a>
 <span class="artists">ドラえもん</span>
 <br />
-<span>This page is for demostration only. We do not own the contents.</span>
+<br />
+<br />
+<span>This page is for demostration only. We do not own the contents. Please contact us if you own the contents.</span>
