--- a/manga.html
+++ b/manga.html
@@ -16,4 +16,6 @@ layout: default
 <br />
 <a class="chapter" cid="chapter001" href="/pages.html">Volume 1</a>
 <br />
-<span>This page is for demostration only. We do not own the contents.</span>
+<br />
+<br />
+<span>This page is for demostration only. We do not own the contents. Please contact us if you own the contents.</span>
