--- a/pages.html
+++ b/pages.html
@@ -12,4 +12,6 @@ layout: default
     </li>
 </ul>
 <br />
-<span>This page is for demostration only. We do not own the contents.</span>
+<br />
+<br />
+<span>This page is for demostration only. We do not own the contents. Please contact us if you own the contents.</span>
