--- a/demo.html
+++ b/demo.html
@@ -1,11 +1,12 @@
 ---
 layout: default
 ---
-
-<a href="/manga.html">
-    <img class="cover" src="/assets/img/p01.jpeg" alt="manga">
-</a>
-<span class="artists">ドラえもん</span>
+<div class="demo">
+    <a href="/manga.html">
+        <img class="cover" src="/assets/img/p01.jpeg" alt="manga">
+    </a>
+    <span class="artists">ドラえもん</span>
+</div>
 <br />
 <br />
 <br />
