--- a/demo.html
+++ b/demo.html
@@ -1,11 +1,15 @@
 ---
 layout: default
 ---
-<div class="demo">
-    <a href="/manga.html">
-        <img class="cover" src="/assets/img/p01.jpeg" alt="manga">
-    </a>
-    <span class="artists">ドラえもん</span>
+<ul>
+    <li class="demo">
+        <a href="/manga.html">
+            <img class="cover" src="/assets/img/p01.jpeg" alt="manga">
+        </a>
+    </li>
+    <li>
+        <span class="artists">ドラえもん</span>
+    </li>
 </div>
 <br />
 <br />
