--- a/demo.html
+++ b/demo.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 ---
-<ul>
-    <li class="demo">
+<ul class="demo">
+    <li>
         <a href="/manga.html">
             <img class="cover" src="/assets/img/p01.jpeg" alt="manga">
         </a>
