--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<ul>
+<ul class="demo">
     <li>
         <a href="/manga.html">
             <img class="cover" src="/assets/img/p01.jpeg" alt="manga">
@@ -10,7 +10,7 @@ layout: default
     <li>
         <span class="artists">ドラえもん</span>
     </li>
-</div>
+</ul>
 <br />
 <br />
 <br />
