--- a/demo.html
+++ b/demo.html
@@ -8,7 +8,7 @@ layout: default
         </a>
     </li>
     <li>
-        <span class="artists">ドラえもん</span>
+        <span class="title">ドラえもん</span>
     </li>
 </ul>
 <br />
