--- a/demo.html
+++ b/demo.html
@@ -2,12 +2,12 @@
 layout: default
 ---
 <ul class="demo">
-    <li>
+    <li class="demo-item">
         <a href="/manga.html">
             <img class="cover" src="/assets/img/p01.jpeg" alt="manga">
         </a>
     </li>
-    <li>
+    <li class="demo-item">
         <span class="demo-title">ドラえもん</span>
     </li>
 </ul>
