--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<ul class="demo">
+<!-- <ul class="demo">
     <li>
         <a href="/manga.html">
             <img class="cover" src="/assets/img/p01.jpeg" alt="manga">
@@ -11,7 +11,11 @@ layout: default
     <li>
         <span class="demo-title">ドラえもん</span>
     </li>
-</ul>
+</ul> -->
+<a href="/manga.html">
+    <img class="cover" src="/assets/img/p01.jpeg" alt="manga">
+</a>
+<span class="demo-title">ドラえもん</span>
 <br />
 <br />
 <br />
