--- a/demo.html
+++ b/demo.html
@@ -12,10 +12,12 @@ layout: default
         <span class="demo-title">ドラえもん</span>
     </li>
 </ul> -->
-<a href="/manga.html">
-    <img class="cover" src="/assets/img/p01.jpeg" alt="manga">
-</a>
-<span class="demo-title">ドラえもん</span>
+<div>
+    <a href="/manga.html">
+        <img class="cover" src="/assets/img/p01.jpeg" alt="manga">
+    </a>
+</div>
+<div class="demo-title">ドラえもん</div>
 <br />
 <br />
 <br />
