--- a/manga.html
+++ b/manga.html
@@ -8,9 +8,9 @@ layout: default
     </div>
 
     <div class="info">
-        <span class="title">ドラえもん</span>
+        <div class="title">ドラえもん</div>
         <br />
-        <span class="artists">藤子・F・不二雄</span>
+        <div class="artists">藤子・F・不二雄</div>
     </div>
 </div>
 <br />
@@ -18,4 +18,4 @@ layout: default
 <br />
 <br />
 <br />
-<span>This page is for demostration only. We do not own the contents. Please contact us if you own the contents.</span>
+<div>This page is for demostration only. We do not own the contents. Please contact us if you own the contents.</div>
