--- a/pages.html
+++ b/pages.html
@@ -14,4 +14,4 @@ layout: default
 <br />
 <br />
 <br />
-<span>This page is for demostration only. We do not own the contents. Please contact us if you own the contents.</span>
+<div>This page is for demostration only. We do not own the contents. Please contact us if you own the contents.</div>
