--- a/demo.html
+++ b/demo.html
@@ -2,17 +2,7 @@
 layout: default
 ---
 
-<!-- <ul class="demo">
-    <li>
-        <a href="/manga.html">
-            <img class="cover" src="/assets/img/p01.jpeg" alt="manga">
-        </a>
-    </li>
-    <li>
-        <span class="demo-title">ドラえもん</span>
-    </li>
-</ul> -->
-<div>
+<div class="demo-cover">
     <a href="/manga.html">
         <img class="cover" src="/assets/img/p01.jpeg" alt="manga">
     </a>
@@ -21,4 +11,4 @@ layout: default
 <br />
 <br />
 <br />
-<span>This page is for demostration only. We do not own the contents. Please contact us if you own the contents.</span>
+<div>This page is for demostration only. We do not own the contents. Please contact us if you own the contents.</div>
