--- a/pages.html
+++ b/pages.html
@@ -2,15 +2,20 @@
 layout: default
 ---
 
-<ul class="pages" cid="chapter001" mid="manga001">
-    <li>
+<div class="pages" cid="chapter001" mid="manga001">
+    <div class="page">
         <img src="/assets/img/p02.jpeg">
+    </div>
+    <div class="page">
         <img src="/assets/img/p03.jpeg">
+    </div>
+    <div class="page">
         <img src="/assets/img/p04.jpeg">
+    </div>
+    <div class="page">
         <img src="/assets/img/p05.jpeg">
-        </a>
-    </li>
-</ul>
+    </div>
+</div>
 <br />
 <br />
 <br />
