--- a/pages.html
+++ b/pages.html
@@ -3,6 +3,12 @@ layout: default
 ---
 
 <div class="pages" cid="chapter001" mid="manga001">
+    <img src="/assets/img/p02.jpeg">
+    <img src="/assets/img/p03.jpeg">
+    <img src="/assets/img/p04.jpeg">
+    <img src="/assets/img/p05.jpeg">
+</div>
+<!-- <div class="pages" cid="chapter001" mid="manga001">
     <div class="page">
         <img src="/assets/img/p02.jpeg">
     </div>
@@ -15,7 +21,7 @@ layout: default
     <div class="page">
         <img src="/assets/img/p05.jpeg">
     </div>
-</div>
+</div> -->
 <br />
 <br />
 <br />
