--- a/pages.html
+++ b/pages.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="pages" cid="chapter001" mid="manga001">
+<div cid="chapter001" mid="manga001">
     <img src="/assets/img/p02.jpeg">
     <img src="/assets/img/p03.jpeg">
     <img src="/assets/img/p04.jpeg">
