--- a/pages.html
+++ b/pages.html
@@ -2,26 +2,12 @@
 layout: default
 ---
 
-<div cid="chapter001" mid="manga001">
+<div class="pages" cid="chapter001" mid="manga001">
     <img src="/assets/img/p02.jpeg">
     <img src="/assets/img/p03.jpeg">
     <img src="/assets/img/p04.jpeg">
     <img src="/assets/img/p05.jpeg">
 </div>
-<!-- <div class="pages" cid="chapter001" mid="manga001">
-    <div class="page">
-        <img src="/assets/img/p02.jpeg">
-    </div>
-    <div class="page">
-        <img src="/assets/img/p03.jpeg">
-    </div>
-    <div class="page">
-        <img src="/assets/img/p04.jpeg">
-    </div>
-    <div class="page">
-        <img src="/assets/img/p05.jpeg">
-    </div>
-</div> -->
 <br />
 <br />
 <br />
