--- a/demo.html
+++ b/demo.html
@@ -11,4 +11,4 @@ layout: default
 <br />
 <br />
 <br />
-<div>This page is for demostration only. We do not own the contents. Please contact us if you own the contents.</div>
+<div>This page is for demostration only. We do not own the contents.</div>
