--- a/pages.html
+++ b/pages.html
@@ -11,4 +11,4 @@ layout: default
 <br />
 <br />
 <br />
-<div>This page is for demostration only. We do not own the contents. Please contact us if you own the contents.</div>
+<div>We do not own any of the contents used in this page and this page is for demostration purpose only.</div>
