--- a/manga.html
+++ b/manga.html
@@ -12,7 +12,7 @@ layout: default
     </div>
 </div>
 <br />
-<a class="chapter" cid="chapter001" href="/pages.html">Volume 1</a>
+<a class="chapter" cid="chapter001" href="/pages.html">第1巻</a>
 <br />
 <br />
 <br />
