--- a/pages.html
+++ b/pages.html
@@ -3,10 +3,10 @@ layout: default
 ---
 
 <div class="pages" cid="chapter001" mid="manga001">
-    <img src="/assets/img/p02.jpeg">
-    <img src="/assets/img/p03.jpeg">
-    <img src="/assets/img/p04.jpeg">
-    <img src="/assets/img/p05.jpeg">
+    <img src="/assets/img/p02.jpeg" alt="p01">
+    <img src="/assets/img/p03.jpeg" alt="p02">
+    <img src="/assets/img/p04.jpeg" alt="p03">
+    <img src="/assets/img/p05.jpeg" alt="p04">
 </div>
 <br />
 <br />
