add multi language support

--- a/en/manga.html
+++ b/en/manga.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+lang: en
+title: manga
 ---
 
 <div class="manga" mid="manga001">
@@ -16,4 +18,4 @@ layout: default
 <br />
 <br />
 <br />
-<div>We do not own any of the contents used in this page and this page is for demostration purpose only.</div>
+<div>We do not own any of the contents used in this page and this page is for demonstration purpose only.</div>
