--- a/zh/pages.html
+++ b/zh/pages.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+lang: zh
+title: pages
 ---
 
 <div class="pages" cid="chapter001" mid="manga001">
@@ -11,4 +13,4 @@ layout: default
 <br />
 <br />
 <br />
-<div>We do not own any of the contents used in this page and this page is for demostration purpose only.</div>
+<div>我們並未持有本頁所使用的圖片的版權。本頁僅用於示範用途。</div>
