--- a/en/manga.html
+++ b/en/manga.html
@@ -14,7 +14,7 @@ title: manga
     </div>
 </div>
 <br />
-<a class="chapter" cid="chapter001" href="/pages.html">第1巻</a>
+<a class="chapter" cid="chapter001" href="/en/pages.html">第1巻</a>
 <br />
 <br />
 <br />
