--- a/zh/manga.html
+++ b/zh/manga.html
@@ -14,8 +14,8 @@ title: manga
     </div>
 </div>
 <br />
-<a class="chapter" cid="chapter001" href="/pages.html">第1巻</a>
+<a class="chapter" cid="chapter001" href="/zh/pages.html">第1巻</a>
 <br />
 <br />
 <br />
-<div>我們並未持有本頁所使用的圖片的版權。本頁僅用於示範用途。</div>
+<div>我們並未持有本頁所使用圖片的版權。本頁僅用於示範用途。</div>
