--- a/en/demo.html
+++ b/en/demo.html
@@ -5,7 +5,7 @@ title: demo
 ---
 
 <div class="demo-cover">
-    <a href="/manga.html">
+    <a href="/en/manga.html">
         <img class="cover" src="/assets/img/p01.jpeg" alt="manga">
     </a>
 </div>
