--- a/zh-HK/demo.html
+++ b/zh-HK/demo.html
@@ -4,6 +4,8 @@ lang: zh-HK
 title: demo
 ---
 
+<!-- same as zh -->
+
 <div class="demo-cover">
     <a href="/zh-HK/manga.html">
         <img class="cover" src="/assets/img/p01.jpeg" alt="manga">
