--- a/zh-HK/pages.html
+++ b/zh-HK/pages.html
@@ -4,6 +4,8 @@ lang: zh-HK
 title: pages
 ---
 
+<!-- same as zh -->
+
 <div class="pages" cid="chapter001" mid="manga001">
     <img src="/assets/img/p02.jpeg" alt="p01">
     <img src="/assets/img/p03.jpeg" alt="p02">
