--- a/zh-HK/manga.html
+++ b/zh-HK/manga.html
@@ -4,6 +4,8 @@ lang: zh-HK
 title: manga
 ---
 
+<!-- same as zh -->
+
 <div class="manga" mid="manga001">
     <div>
         <img class="cover" src="/assets/img/p01.jpeg" alt="manga">
