--- a/zh-HK/demo.html
+++ b/zh-HK/demo.html
@@ -4,7 +4,7 @@ lang: zh-HK
 title: demo
 ---
 
-<!-- same as zh -->
+<!-- same as zh, except the urls -->
 
 <div class="demo-cover">
     <a href="/zh-HK/manga.html">
