--- a/zh-HK/manga.html
+++ b/zh-HK/manga.html
@@ -4,7 +4,7 @@ lang: zh-HK
 title: manga
 ---
 
-<!-- same as zh -->
+<!-- same as zh, except the urls -->
 
 <div class="manga" mid="manga001">
     <div>
