update demo page

--- a/zh-HK/pages.html
+++ b/zh-HK/pages.html
@@ -15,4 +15,8 @@ title: pages
 <br />
 <br />
 <br />
-<div>我們並未持有本頁所使用的圖片的版權。本頁僅用於示範用途。</div>
+<span>我們並未持有本頁所使用的圖片的版權。本頁僅用於示範用途。本頁所使用的圖片均為預覽內容。如喜歡這作品，請經</span>
+<span>
+    <a href="url">這裡</a>
+</span>
+<span>購買。</span>
