--- a/zh-HK/manga.html
+++ b/zh-HK/manga.html
@@ -8,11 +8,11 @@ title: manga
 
 <div class="manga" mid="manga001">
     <div>
-        <img class="cover" src="/assets/img/p01.jpeg" alt="manga">
+        <img class="cover" src="/api/pic/covers/manga01.jpeg" alt="manga">
     </div>
     <div class="info">
-        <div class="title">ドラえもん</div>
-        <div class="artists">藤子・F・不二雄</div>
+        <div class="title">おちこぼれフルーツタルト</div>
+        <div class="artists">浜弓場双</div>
     </div>
 </div>
 <br />
@@ -20,4 +20,8 @@ title: manga
 <br />
 <br />
 <br />
-<div>我們並未持有本頁所使用的圖片的版權。本頁僅用於示範用途。</div>
+<span>我們並未持有本頁所使用的圖片的版權。本頁僅用於示範用途。如喜歡這作品，請經</span>
+<span>
+    <a href="url">這裡</a>
+</span>
+<span>購買。</span>
