revise zh-hk demo

--- a/zh-HK/pages.html
+++ b/zh-HK/pages.html
@@ -6,17 +6,26 @@ title: pages
 
 <!-- same as zh -->
 
-<div class="pages" cid="chapter001" mid="manga001">
-    <img src="/assets/img/p02.jpeg" alt="p01">
-    <img src="/assets/img/p03.jpeg" alt="p02">
-    <img src="/assets/img/p04.jpeg" alt="p03">
-    <img src="/assets/img/p05.jpeg" alt="p04">
+<div class="pages" cid="chapter01" mid="manga01">
+    <img src="/api/pic/chapters/chapter01/B01ELD3ZVW.01.S001.LXXXXXXX.jpg" alt="p01">
+    <img src="/api/pic/chapters/chapter01/B01ELD3ZVW.01.S003.LXXXXXXX.jpg" alt="p02">
+    <img src="/api/pic/chapters/chapter01/B01ELD3ZVW.01.S004.JUMBOXXX.jpg" alt="p03">
+    <img src="/api/pic/chapters/chapter01/B01ELD3ZVW.01.S005.JUMBOXXX.jpg" alt="p04">
+    <img src="/api/pic/chapters/chapter01/B01ELD3ZVW.01.S006.JUMBOXXX.jpg" alt="p05">
+    <img src="/api/pic/chapters/chapter01/B01ELD3ZVW.01.S007.JUMBOXXX.jpg" alt="p06">
+    <img src="/api/pic/chapters/chapter01/B01ELD3ZVW.01.S008.JUMBOXXX.jpg" alt="p07">
+    <img src="/api/pic/chapters/chapter01/B01ELD3ZVW.01.S009.JUMBOXXX.jpg" alt="p08">
+    <img src="/api/pic/chapters/chapter01/B01ELD3ZVW.01.S010.JUMBOXXX.jpg" alt="p09">
+    <img src="/api/pic/chapters/chapter01/B01ELD3ZVW.01.S011.JUMBOXXX.jpg" alt="p10">
+    <img src="/api/pic/chapters/chapter01/B01ELD3ZVW.01.S012.JUMBOXXX.jpg" alt="p11">
 </div>
 <br />
 <br />
 <br />
-<span>我們並未持有本頁所使用的圖片的版權。本頁僅用於示範用途。本頁所使用的圖片均為預覽內容。如喜歡這作品，請經</span>
+<span>我們並未持有本頁所使用的圖片的版權。本頁僅用於示範用途。所有圖片均為正式預覽內容。如喜歡這作品，請經</span>
 <span>
-    <a href="url">這裡</a>
+    <a href="https://www.amazon.co.jp/%E3%81%8A%E3%81%A1%E3%81%93%E3%81%BC%E3%82%8C%E3%83%95%E3%83%AB%E3%83%BC%E3%83%84%E3%82%BF%E3%83%AB%E3%83%88-%EF%BC%91%E5%B7%BB-%E3%81%BE%E3%82%93%E3%81%8C%E3%82%BF%E3%82%A4%E3%83%A0KR%E3%82%B3%E3%83%9F%E3%83%83%E3%82%AF%E3%82%B9-%E6%B5%9C%E5%BC%93%E5%A0%B4%E5%8F%8C-ebook/dp/B01ELD3ZVW/">
+        這裡
+    </a>
 </span>
-<span>購買。</span>
+<span>或其他途徑購買。</span>
