--- a/en/manga.html
+++ b/en/manga.html
@@ -4,18 +4,24 @@ lang: en
 title: manga
 ---
 
-<div class="manga" mid="manga001">
+<div class="manga" mid="manga01">
     <div>
-        <img class="cover" src="/assets/img/p01.jpeg" alt="manga">
+        <img class="cover" src="/api/pic/covers/manga01.jpeg" alt="manga">
     </div>
     <div class="info">
-        <div class="title">ドラえもん</div>
-        <div class="artists">藤子・F・不二雄</div>
+        <div class="title">おちこぼれフルーツタルト</div>
+        <div class="artists">浜弓場双</div>
     </div>
 </div>
 <br />
-<a class="chapter" cid="chapter001" href="/en/pages.html">第1巻</a>
+<a class="chapter" cid="chapter01" href="/en/pages.html">第1巻</a>
 <br />
 <br />
 <br />
-<div>We do not own any of the contents used in this page and this page is for demonstration purpose only.</div>
+<span>We do not own any of the contents used in this page. This page is for demonstration purpose only. If you like this piece of work, please purchase it </span>
+<span>
+    <a href="https://www.amazon.co.jp/%E3%81%8A%E3%81%A1%E3%81%93%E3%81%BC%E3%82%8C%E3%83%95%E3%83%AB%E3%83%BC%E3%83%84%E3%82%BF%E3%83%AB%E3%83%88-%EF%BC%91%E5%B7%BB-%E3%81%BE%E3%82%93%E3%81%8C%E3%82%BF%E3%82%A4%E3%83%A0KR%E3%82%B3%E3%83%9F%E3%83%83%E3%82%AF%E3%82%B9-%E6%B5%9C%E5%BC%93%E5%A0%B4%E5%8F%8C-ebook/dp/B01ELD3ZVW/">
+        here
+    </a>
+</span>
+<span>or through other distributors.</span>
