--- a/zh-HK/manga.html
+++ b/zh-HK/manga.html
@@ -20,10 +20,10 @@ title: manga
 <br />
 <br />
 <br />
-<span>我們並未持有本頁所使用的圖片的版權。本頁僅用於示範用途。如喜歡這作品，請經</span>
+<span>我們並未持有本頁所使用的圖片的版權。如喜歡這作品，請經</span>
 <span>
     <a href="https://www.amazon.co.jp/%E3%81%8A%E3%81%A1%E3%81%93%E3%81%BC%E3%82%8C%E3%83%95%E3%83%AB%E3%83%BC%E3%83%84%E3%82%BF%E3%83%AB%E3%83%88-%EF%BC%91%E5%B7%BB-%E3%81%BE%E3%82%93%E3%81%8C%E3%82%BF%E3%82%A4%E3%83%A0KR%E3%82%B3%E3%83%9F%E3%83%83%E3%82%AF%E3%82%B9-%E6%B5%9C%E5%BC%93%E5%A0%B4%E5%8F%8C-ebook/dp/B01ELD3ZVW/">
         這裡
     </a>
 </span>
-<span>或其他途徑購買。</span>
+<span>或其他途徑購買。本頁僅用於示範用途。</span>
